fix(faire): modify some field and views

--- a/addons/vt_odoo_faire/views/faire_oauth_views.xml
+++ b/addons/vt_odoo_faire/views/faire_oauth_views.xml
@@ -22,9 +22,11 @@
                             <group>
                                 <field name="date_request"/>
                                 <field name="state"/>
+                                <field name="redirect_url" widget="url"/>
                                 <field name="authorization_url" widget="url"/>
                                 <field name="authorization_code" widget="password"/>
                                 <field name="oauth_access_token" widget="password"/>
+                                <field name="token_type" widget="password"/>
                             </group>
                         </group>
                     </sheet>
