--- a/addons/vt_odoo_faire/views/faire_oauth_views.xml
+++ b/addons/vt_odoo_faire/views/faire_oauth_views.xml
@@ -7,7 +7,8 @@
             <field name="arch" type="xml">
                 <form string="Faire OAuth V2">
                     <header>
-                        <button name="button_authorize" string="Authorize" class="btn-primary" type="object"/>
+                        <button name="button_authorize" string="Authorize" class="btn-secondary" type="object"/>
+                        <button name="button_authenticate" string="Authenticate" class="btn-primary" type="object"/>
                         <field name="status" widget="statusbar"/>
                     </header>
                     <sheet>
