--- a/addons/vt_odoo_faire/views/menu_views.xml
+++ b/addons/vt_odoo_faire/views/menu_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
         <!-- Faire -->
-        <menuitem id="faire_menu_root" name="Faire" web_icon="vt_odoo_faire,static/description/icon.png" sequence="10">
+        <menuitem id="faire_menu_root" name="Faire" web_icon="vt_odoo_faire,static/description/faire-logo.png" sequence="10">
             <!-- Faire/Orders -->
             <menuitem id="faire_order_menu" name="Orders" action="sale.action_orders" sequence="10"/>
             <!-- Faire/Customer -->
