--- a/external_addons/muk_web_appsbar/static/src/webclient/appsbar/appsbar.scss
+++ b/external_addons/muk_web_appsbar/static/src/webclient/appsbar/appsbar.scss
@@ -7,7 +7,7 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        // justify-content: space-between;
 	    white-space: nowrap;
 	    .mk_apps_sidebar_menu {
 	    	padding: 0;
