feat: populate wholesale and retail price

--- a/addons/vt_odoo_faire/views/product_template_views.xml
+++ b/addons/vt_odoo_faire/views/product_template_views.xml
@@ -9,6 +9,33 @@
                 <field name="invoice_policy" position="before">
                     <field name="faire_product_image_url"/>
                 </field>
+                <field name="list_price" position="after">
+                    <field name="retail_price"/>
+                    <field name="wholesale_price"/>
+                </field>
+            </field>
+        </record>
+
+        <record id="product_template_kanban_view" model="ir.ui.view">
+            <field name="name">product.template.view.kanban</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_kanban_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='list_price']/.." position="after">
+                    <span>
+                        Retail price: <field name="retail_price"/>
+                    </span>
+                    <span>
+                        Wholesale price: <field name="wholesale_price"/>
+                    </span>
+                </xpath>
+                <xpath expr="//field[@name='list_price']/.." position="attributes">
+                    <attribute name="style">display: none;</attribute>
+                </xpath>
+                <field name="list_price" position="after">
+                    <field name="retail_price"/>
+                    <field name="wholesale_price"/>
+                </field>
             </field>
         </record>
     </data>
