--- a/addons/vt_odoo_faire/views/product_template_views.xml
+++ b/addons/vt_odoo_faire/views/product_template_views.xml
@@ -7,12 +7,13 @@
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
                 <field name="invoice_policy" position="before">
-                    <field name="faire_product_image_url"/>
+                    <field name="faire_product_image_data"/>
                 </field>
-                <field name="list_price" position="after">
-                    <field name="retail_price"/>
-                    <field name="wholesale_price"/>
-                </field>
+                <xpath expr="//label[@for='list_price']" position="before">
+                    <field name="min_qty" widget="integer"/>
+                    <!-- <field name="retail_price"/> -->
+                    <!-- <field name="wholesale_price"/> -->
+                </xpath>
             </field>
         </record>
 
@@ -36,6 +37,17 @@
                     <field name="retail_price"/>
                     <field name="wholesale_price"/>
                 </field>
+            </field>
+        </record>
+
+        <record id="action_process_image_data" model="ir.actions.server">
+            <field name="name">Process Image Data</field>
+            <field name="model_id" ref="product.model_product_template"/>
+            <field name="binding_model_id" ref="product.model_product_template"/>
+            <field name="state">code</field>
+            <field name="code">
+                if records:
+                    action = records._process_faire_product_image_data()
             </field>
         </record>
     </data>
