--- a/addons/vt_odoo_faire/views/menu_views.xml
+++ b/addons/vt_odoo_faire/views/menu_views.xml
@@ -6,15 +6,15 @@
             <!-- Faire/Orders -->
             <menuitem id="faire_order_menu" name="Orders" action="faire_order_action" sequence="10"/>
             <!-- Faire/Customer -->
-            <menuitem id="faire_customer_menu" name="Customers" action="account.res_partner_action_customer" sequence="20"/>
+            <!-- <menuitem id="faire_customer_menu" name="Customers" action="account.res_partner_action_customer" sequence="20"/> -->
             <!-- Faire/Products -->
-            <menuitem id="faire_product_menu" name="Products" action="sale.product_template_action" sequence="30"/>
+            <!-- <menuitem id="faire_product_menu" name="Products" action="sale.product_template_action" sequence="30"/> -->
             <!-- Faire/Configuration -->
-            <menuitem id="faire_configuration_menu_sub" name="Configuration" sequence="40">
+            <!-- <menuitem id="faire_configuration_menu_sub" name="Configuration" sequence="40"> -->
                 <!-- Faire/Configuration/OAuth V2 -->
-                <menuitem id="faire_api_service_configuration_menu_sub" name="Faire API Service" sequence="10" action="faire_api_service_action"/>
-                <menuitem id="faire_configuration_oauth_menu" name="OAuth V2" sequence="10" action="faire_oauth_action"/>
-            </menuitem>
+                <!-- <menuitem id="faire_api_service_configuration_menu_sub" name="Faire API Service" sequence="10" action="faire_api_service_action"/> -->
+                <!-- <menuitem id="faire_configuration_oauth_menu" name="OAuth V2" sequence="10" action="faire_oauth_action"/> -->
+            <!-- </menuitem> -->
         </menuitem>
     </data>
 </odoo>
