--- a/addons/orderflow_app/views/menu_views.xml
+++ b/addons/orderflow_app/views/menu_views.xml
@@ -25,7 +25,8 @@
         <!-- Invoicing -->
         <record id="account.menu_finance" model="ir.ui.menu">
             <field name="sequence">99</field>
-            <field name="active">False</field>
+            <field name="active">True</field>
+            <field name="groups_id" eval="[(6, 0, [ref('base.group_no_one')])]"/>
         </record>
         <!-- Link Tracker -->
         <record id="utm.menu_link_tracker_root" model="ir.ui.menu">
