feat(faire orders): add field amount_total

--- a/addons/vt_odoo_faire/views/faire_order_views.xml
+++ b/addons/vt_odoo_faire/views/faire_order_views.xml
@@ -40,6 +40,14 @@
                                 </field>
                             </page>
                         </notebook>
+                        <group name="note_group" col="6" class="mt-2 mt-md-0">
+                            <group colspan="4" class="order-1 order-lg-0">
+                                <!-- <field colspan="2" name="note" nolabel="1" placeholder="Terms and conditions..."/> -->
+                            </group>
+                            <group class="oe_subtotal_footer d-flex order-0 order-lg-1 flex-column gap-0 gap-sm-3" colspan="2" name="sale_total">
+                                <field name="amount_total" readonly="1"/>
+                            </group>
+                        </group>
                     </sheet>
                 </form>
             </field>
@@ -57,6 +65,7 @@
                     <field name="processing_at"/>
                     <field name="is_free_shipping"/>
                     <field name="free_shipping_reason"/>
+                    <field name="amount_total"/>
                 </list>
             </field>
         </record>
