fix(faire orders): add field amount_subtotal

--- a/addons/vt_odoo_faire/views/faire_order_views.xml
+++ b/addons/vt_odoo_faire/views/faire_order_views.xml
@@ -35,6 +35,7 @@
                                         <field name="includes_tester"/>
                                         <field name="quantity"/>
                                         <field name="price_cents"/>
+                                        <field name="amount_subtotal"/>
                                         <field name="state"/>
                                     </list>
                                 </field>
